--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,7 +11,7 @@
 </head>
 <body class="text-center">
 <form class="form-signin" th:action="@{/login}" method="post">
-    <img class="mb-4" src="images/logo2.jpg" alt width="300" height="72">
+    <img class="mb-4" th:src="@{/img/logo2.jpg}" alt width="300" height="72">
     <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
     <input id="username" class="form-control" type="text" name="username" placeholder="Username" required/>
     <input id="password" class="form-control" type="password" name="password" placeholder="Password" required/>
