--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,8 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
     <title>Login</title>
-    <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet"/>
-    <script type="text/javascript" th:src="@{/js/bootstrap.min.js}"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
     <link th:href="@{/css/style.css}" rel="stylesheet"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -26,7 +27,7 @@
             <input class="btn btn-success btn-lg btn-block" type="submit" value="Sign In"/>
         </div>
     </form>
-    <div th:if="${param.error}">
+    <div class="error" th:if="${param.error}">
         Invalid username and password.
     </div>
     <div th:if="${param.logout}">
