--- a/src/main/resources/templates/game1player.html
+++ b/src/main/resources/templates/game1player.html
@@ -23,7 +23,7 @@
 <div class="formD">
     <form action="">
         <label for="gWoord">Raad het woord</label>
-        <input type="text" id="gWoord" name="geradenwoord" placeholder="Jouw poging...">
+        <input type="text" id="gWoord" name="geradenwoord" placeholder="Jouw attempt...">
         <button class="buttonSubmit" id="myBtn" value="Submit">Submit</button>
     </form>
 </div>
