--- a/src/main/resources/templates/game2players.html
+++ b/src/main/resources/templates/game2players.html
@@ -26,7 +26,7 @@
 <div class="formD">
     <form action="">
         <label for="gWoord">Raad het woord</label>
-        <input type="text" id="gWoord" name="geradenwoord" placeholder="Jouw poging...">
+        <input type="text" id="gWoord" name="geradenwoord" placeholder="Jouw attempt...">
         <button class="buttonSubmit" id="myBtn">Submit</button>
     </form>
 </div>
